--- a/intro.html
+++ b/intro.html
@@ -178,9 +178,9 @@
 
       <p>
         This page introduces the structure and flow of the genome assembly module
-        for ConGen2025. Use the navigation tabs above to move between modules. This workshop
-        was originally developed by <a href="https://gwct.bio/" target="_blank">Gregg Thomas</a>
-        and has been adapted and updated over the years. Previous versions of the workshop can be found under the 
+        for ConGen2025. Use the navigation tabs above to move between sections. This workshop
+        was originally primarily developed by <a href="https://gwct.bio/" target="_blank">Gregg Thomas</a>. 
+        Previous versions of the workshop can be found under the 
         <a href="https://ellieearmstrong.github.io/congen_2025/links.html" target="_blank">Links</a> tab.
       </p>
       <p>
