--- a/workshop.html
+++ b/workshop.html
@@ -96,7 +96,7 @@
       position: absolute;
       top: 100%;
       left: 0;
-      margin-top: 0.35rem;
+      margin-top: 0;
       background: #f9fafb;
       border-radius: 14px;
       border: 1px solid #e5e7eb;
