--- a/workshop.html
+++ b/workshop.html
@@ -613,6 +613,7 @@ You can catch problems before you use the data in later analyses.
           <p>First, move to your home directory:</p>
 
           <div class="code-block">
+            <div class="code-block-green">
 cd ~
           </div>
 
@@ -640,6 +641,7 @@ cd ~
           <p>Now copy the workshop data directory into your home directory:</p>
 
           <div class="code-block">
+            <div class="code-block-green">
 cp -r instructor_materials/Ellie_Armstrong/congen-assembly-2025/ .
           </div>
 
@@ -681,6 +683,7 @@ cp -r instructor_materials/Ellie_Armstrong/congen-assembly-2025/ .
           <p>Change into the new directory:</p>
 
           <div class="code-block">
+            <div class="code-block-green">
 cd congen-assembly-2025
           </div>
 
@@ -781,6 +784,7 @@ ls
           </p>
 
           <div class="code-block">
+            <div class="code-block-green">
 mkdir assemblies
           </div>
 
@@ -807,6 +811,7 @@ mkdir assemblies
           </table>
 
           <div class="code-block">
+            <div class="code-block-green">
 mkdir quality-control
           </div>
 
@@ -832,6 +837,7 @@ mkdir quality-control
           </table>
 
           <div class="code-block">
+            <div class="code-block-green">
 mkdir mapped-reads
           </div>
 
@@ -857,6 +863,7 @@ mkdir mapped-reads
           </table>
 
           <div class="code-block">
+            <div class="code-block-green">
 mkdir fastqc-output
           </div>
 
