--- a/workshop.html
+++ b/workshop.html
@@ -615,6 +615,7 @@ You can catch problems before you use the data in later analyses.
           <div class="code-block">
             <div class="code-block-green">
 cd ~
+            </div>
           </div>
 
           <table>
@@ -643,6 +644,7 @@ cd ~
           <div class="code-block">
             <div class="code-block-green">
 cp -r instructor_materials/Ellie_Armstrong/congen-assembly-2025/ .
+            </div>
           </div>
 
           <table>
@@ -685,6 +687,7 @@ cp -r instructor_materials/Ellie_Armstrong/congen-assembly-2025/ .
           <div class="code-block">
             <div class="code-block-green">
 cd congen-assembly-2025
+            </div>
           </div>
 
           <table>
@@ -786,6 +789,7 @@ ls
           <div class="code-block">
             <div class="code-block-green">
 mkdir assemblies
+            </div>
           </div>
 
           <table>
@@ -813,6 +817,7 @@ mkdir assemblies
           <div class="code-block">
             <div class="code-block-green">
 mkdir quality-control
+            </div>
           </div>
 
           <table>
@@ -839,6 +844,7 @@ mkdir quality-control
           <div class="code-block">
             <div class="code-block-green">
 mkdir mapped-reads
+            </div>
           </div>
 
           <table>
@@ -865,6 +871,7 @@ mkdir mapped-reads
           <div class="code-block">
             <div class="code-block-green">
 mkdir fastqc-output
+            </div>
           </div>
 
           <table>
